integrate `react-router`
- move home page to `live-feed`.
- add `videos` page
- add `video-metadata.json` file that includes all the videos from
`cozy-creator` website.
- udpate `tsconfig.app.json` and `vite.config.ts` to include new aliases

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,6 +10,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@data/*": ["./src/data/*"],
+      "@pages/*": ["./src/pages/*"],
       "@ui/*": ["./src/components/ui/*"],
       "@constants/*": ["./src/constants/*"],
       "@components/*": ["./src/components/*"]
